--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,7 @@
    "outputs": [],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "name.titl"
+    "name.title()\n"
    ]
   },
   {
