--- a/index.ipynb
+++ b/index.ipynb
@@ -156,7 +156,8 @@
    "outputs": [],
    "source": [
     "\"art vandelay\" # 'Art Vandelay'\n",
-    "\"ar\"\n"
+    "\"art vandelay\".title()\n",
+    "\n"
    ]
   },
   {
