--- a/index.ipynb
+++ b/index.ipynb
@@ -206,21 +206,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-5-080b3bed1635>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-6-ea125577134c>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-5-080b3bed1635>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'art.vandelay@vandelay.co'endswith(.com)\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-6-ea125577134c>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    'art.vandelay@vandelay.co'endswith('.com')\u001b[0m\n\u001b[0m                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "'art.vandelay@vandelay.co'endswith('.c)"
+    "'art.vandelay@vandelay.co'endswith('.com')"
    ]
   },
   {
